{
    "version": 1,
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "95e17197-c8a3-4790-b6ad-354c6925ec63",
            "actions": [
                {
                    "name": "FretQ",
                    "type": "Button",
                    "id": "7407bd0a-b82a-4742-b441-7692b7156dcf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FretW",
                    "type": "Button",
                    "id": "9d37f62d-a60a-41fa-9682-53c730dded29",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FretE",
                    "type": "Button",
                    "id": "4fe6b022-9279-4c91-a80b-02e701a84ee8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FretA",
                    "type": "Button",
                    "id": "2592c484-cc43-4120-9438-0b6c57e76fce",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FretS",
                    "type": "Button",
                    "id": "5fa4e6a2-5d1c-41fa-9eae-b6e23870aea0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FretD",
                    "type": "Button",
                    "id": "ac1795a3-e0b8-4c12-8e2c-e4f89578eab6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UpStrum",
                    "type": "Button",
                    "id": "a3cef801-0c27-4d6e-81c9-b89287521e85",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DownStrum",
                    "type": "Button",
                    "id": "41e4ceac-9134-4d0b-a648-a336cfadb65a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HoldLeft",
                    "type": "Button",
                    "id": "a649796e-74d9-4912-aba9-43e89a4c4d87",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HoldRight",
                    "type": "Button",
                    "id": "1ca63910-9f39-4fbb-9b31-2dc32346eb4d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "47ac2143-bd4e-4e53-bcea-b78da4baeb8d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e98afb10-a6f0-466d-957a-865a7321c88d",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FretQ",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c0b8085-2719-474e-8459-2acb9e0513b8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FretW",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2afbe25e-d5ad-4dda-8b74-f3a9cd6d58c9",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FretE",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f36fcee3-4205-4b4b-8544-9ed1fdd67af0",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FretA",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "18b517bb-e8c5-432a-96aa-985bc9b86302",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FretS",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e4a8cf8-2e26-4eab-b029-cae238565e5e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FretD",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92d998fb-a325-41df-a77e-488257807d6e",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpStrum",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a04dac04-adf2-42ed-ac1e-d8cf03a42fe7",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DownStrum",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0473c826-e2ae-4844-94a2-375200c9bc67",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HoldLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99942cf8-aa0f-4ad2-ba2d-380a8980dee2",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HoldRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fd5d3bc1-b5ac-404d-b065-c03afd09029d",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}